edited DDQN. left get Q_expect calc part

--- a/dqn_demo/inv_pend_DDQN.ipynb
+++ b/dqn_demo/inv_pend_DDQN.ipynb
@@ -117,7 +117,7 @@
         "GAMMA = 0.99            # 시간할인율\n",
         "MAX_STEPS = 700         # 1에피소드 당 최대 단계 수\n",
         "NUM_EPISODES = 2000      # 최대 에피소드 수\n",
-        "batch_size = 32\n",
+        "BATCH_SIZE = 32\n",
         "capacity = 10000        # Memory capacity"
       ],
       "execution_count": null,
@@ -155,7 +155,7 @@
         "                                   interval=50)\n",
         "\n",
         "    # anim.save('movie_cartpole_DQN.mp4')  # 애니메이션을 저장하는 부분\n",
-        "    anim.save('cartpole_DQN.gif', writer='imagemagick', fps=60)\n",
+        "    anim.save('cartpole_DQN.gif', writer='ImageMagick', fps=60)\n",
         "    display(display_animation(anim, default_mode='loop'))\n",
         "    "
       ],
@@ -201,14 +201,35 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "class Net(nn.Module):\n",
+        "\n",
+        "    def __init__(self,n_in: int, n_mid: int, n_out: int):  \n",
+        "        super(Net, self).__init__()  \n",
+        "        self.fc1 = nn.Linear(n_in, n_mid)  \n",
+        "        self.fc2 = nn.Linear(n_mid, n_mid)\n",
+        "        self.fc3 = nn.Linear(n.mid, n.out)  \n",
+        "\n",
+        "    def forward(self, x):  \n",
+        "        x1 = F.relu(self.fc1(x))  \n",
+        "        x2 = F.relu(self.fc2(x1))\n",
+        "        out = self.fc3(x2)\n",
+        "        return out"
+      ]
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "pPZaCESn38-m",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "class Network:\n",
-        "    ''' Where deep network formed and optimized'''\n",
+        "class TrainNet:\n",
+        "    ''' Where weights are optimized'''\n",
         "    def __init__(self,num_states: int, num_actions: int) -> None:\n",
         "        '''Initialize network models'''\n",
         "        self.num_states = num_states\n",
@@ -216,42 +237,39 @@
         "        \n",
         "        self.mem = ReplayMemory(capacity)                           # Initialize ReplayMem\n",
         "\n",
-        "        self.model = nn.Sequential()                                # Sequential container of modules(networks) \n",
-        "        self.model.add_module('fc1', nn.Linear(num_states, 32))     # Fully-connected(FC) model with input of state output of 32\n",
-        "        self.model.add_module('relu1', nn.ReLU())                   # Backward diff wave alg (RELU typically)\n",
-        "        self.model.add_module('fc2', nn.Linear(32, 32))             # Second module, modules can also have CNN, RNN, etc..\n",
-        "        self.model.add_module('relu2', nn.ReLU())\n",
-        "        self.model.add_module('fc3', nn.Linear(32, num_actions))    # Goes through network with output of action\n",
-        "\n",
+        "        n_in, n_mid, n_out = num_states, 32, num_actions\n",
+        "        self.policy_net = Net(n_in, n_mid, n_out)                   # create policy(main) net\n",
+        "        self.target_net = Net(n_in, n_mid, n_out)                   # create target net\n",
         "        print(self.model)                                           # print out the model\n",
         "        \n",
         "        # Selection of gradient descent model.(i.e. SGD, RMSprop, Adagrad,...)\n",
         "        # change weight coeffs of network with gradient descent of params\n",
         "        self.optimizer = optim.Adam(self.model.parameters(), lr = 0.0001)\n",
-        "        \n",
+        "\n",
         "    def replay(self) -> None:\n",
         "        '''REPLAY OF MEMORY & TRAIN OF NETWORK'''\n",
         "    # -----------------------------------------\n",
         "    # 1. 저장된 transition 수 확인\n",
         "    # -----------------------------------------\n",
         "        # 1.1 저장된 transition의 수가 미니배치 크기보다 작으면 아무 것도 하지 않음\n",
-        "        if len(self.mem) < batch_size:\n",
+        "        if len(self.mem) < BATCH_SIZE:\n",
         "            return None\n",
-        "\n",
+        "    \n",
+        "    def make_minibatch(self) -> list\n",
         "    # -----------------------------------------\n",
-        "    # 2. 미니배치 생성\n",
+        "    #  미니배치 생성\n",
         "    # -----------------------------------------\n",
-        "        # 2.1 메모리 객체에서 미니배치를 추출\n",
-        "        trans_sample = self.mem.sample(batch_size)\n",
+        "        # 1 메모리 객체에서 미니배치를 추출\n",
+        "        trans_sample = self.mem.sample(BATCH_SIZE)\n",
         "\n",
-        "        # 2.2 각 변수를 미니배치에 맞는 형태로 변형\n",
+        "        # 2 각 변수를 미니배치에 맞는 형태로 변형\n",
         "        # trans_sample 은 각 단계 별로 (state, action, state_next, reward) 형태로 BATCH_SIZE 갯수만큼 저장됨\n",
         "        # 다시 말해, (state, action, state_next, reward) * BATCH_SIZE 형태가 된다\n",
         "        # 이것을 미니배치로 만들기 위해\n",
         "        # (state*BATCH_SIZE, action*BATCH_SIZE, state_next*BATCH_SIZE, reward*BATCH_SIZE) 형태로 변환한다\n",
         "        batch = Transition(*zip(*trans_sample))\n",
         "    \n",
-        "        # 2.3 각 변수의 요소를 미니배치에 맞게 변형하고, 신경망으로 다룰 수 있도록 Variable로 만든다\n",
+        "        # 3 각 변수의 요소를 미니배치에 맞게 변형하고, 신경망으로 다룰 수 있도록 Variable로 만든다\n",
         "        # state를 예로 들면, [torch.FloatTensor of size 1*4] 형태의 요소가 BATCH_SIZE 갯수만큼 있는 형태이다\n",
         "        # 이를 torch.FloatTensor of size BATCH_SIZE*4 형태로 변형한다\n",
         "        # 상태, 행동, 보상, non_final 상태로 된 미니배치를 나타내는 Variable을 생성\n",
@@ -260,47 +278,52 @@
         "        action_batch = torch.cat(batch.action)\n",
         "        reward_batch = torch.cat(batch.reward)\n",
         "        non_final_next_state = torch.cat([s for s in batch.next_state if s is not None])\n",
-        "\n",
+        "        return batch, state_batch, action_batch, reward_batch, non_final_next_state\n",
+        "        \n",
+        "    \n",
+        "    def get_expected_Q(self):\n",
+        "    # -----------------------------------------BBBBBBBBBBB\n",
+        "    # 정답신호로 사용할 Q(s_t, a_t)를 계산\n",
         "    # -----------------------------------------\n",
-        "    # 3. 정답신호로 사용할 Q(s_t, a_t)를 계산\n",
-        "    # -----------------------------------------\n",
-        "        # 3.1 신경망을 추론 모드로 전환\n",
-        "        self.model.eval()\n",
+        "        # 1 신경망을 추론 모드로 전환\n",
+        "        self.policy_net.eval()\n",
+        "        self.target_net.eval()\n",
         "\n",
-        "        # 3.2 신경망으로 Q(s_t, a_t)를 계산\n",
+        "        # 2 신경망으로 Q(s_t, a_t)를 계산\n",
         "        # self.model(state_batch)은 왼쪽, 오른쪽에 대한 Q값을 출력하며\n",
         "        # [torch.FloatTensor of size BATCH_SIZEx2] 형태이다\n",
         "        # 여기서부터는 실행한 행동 a_t에 대한 Q값을 계산하므로 action_batch에서 취한 행동 a_t가 \n",
         "        # 왼쪽이냐 오른쪽이냐에 대한 인덱스를 구하고, 이에 대한 Q값을 gather 메서드로 모아온다\n",
-        "        Q = self.model(state_batch).gather(1, action_batch)\n",
+        "        self.Q = self.policy_net(self.state_batch).gather(1, self.action_batch)\n",
         "\n",
-        "        # 3.3 max{Q(s_t+1, a)}값을 계산한다 이때 다음 상태가 존재하는지에 주의해야 한다\n",
+        "        # 3 max{Q(s_t+1, a)}값을 계산한다 이때 다음 상태가 존재하는지에 주의해야 한다\n",
         "        # cartpole이 done 상태가 아니고, next_state가 존재하는지 확인하는 인덱스 마스크를 만듬\n",
         "        # lamba & map -> https://offbyone.tistory.com/73\n",
         "        non_final_mask = torch.ByteTensor(tuple(map(lambda s: s is not None, batch.next_state)))\n",
         "\n",
         "        # 먼저 전체를 0으로 초기화\n",
-        "        next_Q = torch.zeros(batch_size)\n",
+        "        next_Q = torch.zeros(BATCH_SIZE)\n",
         "\n",
         "        # 다음 상태가 있는 인덱스에 대한 최대 Q값을 구한다\n",
         "        # 출력에 접근하여 열방향 최대값(max(1))이 되는 [값, 인덱스]를 구한다\n",
         "        # 그리고 이 Q값(인덱스=0)을 출력한 다음\n",
         "        # detach 메서드로 이 값을 꺼내온다\n",
         "        next_Q[non_final_mask] = self.model(non_final_next_state).max(1)[0].detach()\n",
-        "        # 3.4 정답신호로 사용할 Q(s_t, a_t)값을 Q러닝 식으로 계산한다\n",
+        "        # 4 정답신호로 사용할 Q(s_t, a_t)값을 Q러닝 식으로 계산한다\n",
         "        expected_Q = reward_batch + GAMMA * next_Q\n",
         "\n",
+        "    def update_policynet(self):\n",
         "    # -----------------------------------------\n",
-        "    # 4. 결합 가중치 수정\n",
+        "    #  결합 가중치 수정\n",
         "    # -----------------------------------------\n",
-        "        # 4.1 신경망을 학습 모드로 전환\n",
-        "        self.model.train()\n",
+        "        # 1 신경망을 학습 모드로 전환\n",
+        "        self.policy_net.train()\n",
         "\n",
-        "        # 4.2 손실함수를 계산 (smooth_l1_loss는 Huber 함수)\n",
+        "        # 2 손실함수를 계산 (smooth_l1_loss는 Huber 함수)\n",
         "        # expected_Q는 size가 [minibatch]이므로 unsqueeze하여 [minibatch*1]로 만든다\n",
-        "        loss = F.smooth_l1_loss(Q, expected_Q.unsqueeze(1))\n",
+        "        loss = F.smooth_l1_loss(self.Q, self.expected_Q.unsqueeze(1))\n",
         "\n",
-        "        # 4.3 결합 가중치를 수정한다\n",
+        "        # 3 결합 가중치를 수정한다\n",
         "        self.optimizer.zero_grad()      # Initialize gradient(경사)\n",
         "        loss.backward()                 # Calculate backward(역전파 계산)\n",
         "        self.optimizer.step()           # perform single optimize step (가중치 수정)\n",
@@ -341,7 +364,7 @@
         "        self.env = gym.make(ENV)                                # env set\n",
         "        num_states = self.env.observation_space.shape[0]        # Get State shape (4)\n",
         "        num_actions = self.env.action_space.n                   # Get action numbers (2)\n",
-        "        self.network = Network(num_states,num_actions)          # Initialize Network Class\n",
+        "        self.train = TrainNet(num_states,num_actions)          # Initialize Network Class\n",
         "\n",
         "        \n",
         "    def run(self) -> None:\n",
