Finished DDQN without run/check

--- a/dqn_demo/inv_pend_DDQN.ipynb
+++ b/dqn_demo/inv_pend_DDQN.ipynb
@@ -254,7 +254,16 @@
         "        # 1.1 저장된 transition의 수가 미니배치 크기보다 작으면 아무 것도 하지 않음\n",
         "        if len(self.mem) < BATCH_SIZE:\n",
         "            return None\n",
+        "        # 2. 미니배치 생성\n",
+        "        self.batch, self.state_batch, self.action_batch, self.reward_batch, self.non_final_next_state = self.make_minibatch()\n",
+        "\n",
+        "        # 3. expected_Q 계산\n",
+        "        self.expected_Q = self.get_expected_Q()\n",
+        "\n",
+        "        # 4. 결합 가중치 수정 (정책망 업데이트)\n",
+        "        self.update_policynet()\n",
         "    \n",
+        "\n",
         "    def make_minibatch(self) -> list\n",
         "    # -----------------------------------------\n",
         "    #  미니배치 생성\n",
@@ -303,14 +312,25 @@
         "\n",
         "        # 먼저 전체를 0으로 초기화\n",
         "        next_Q = torch.zeros(BATCH_SIZE)\n",
+        "        action_max = torch.zeros(BATCH_SIZE).type(torch.LongTensor)    # 다음 상태에서 Q값이 최대가 되는 행동\n",
         "\n",
-        "        # 다음 상태가 있는 인덱스에 대한 최대 Q값을 구한다\n",
-        "        # 출력에 접근하여 열방향 최대값(max(1))이 되는 [값, 인덱스]를 구한다\n",
-        "        # 그리고 이 Q값(인덱스=0)을 출력한 다음\n",
-        "        # detach 메서드로 이 값을 꺼내온다\n",
-        "        next_Q[non_final_mask] = self.model(non_final_next_state).max(1)[0].detach()\n",
-        "        # 4 정답신호로 사용할 Q(s_t, a_t)값을 Q러닝 식으로 계산한다\n",
-        "        expected_Q = reward_batch + GAMMA * next_Q\n",
+        "        # 다음 상태에서 Q값이 최대가 되는 행동 action_max을 Main Q-Network로 계산\n",
+        "        # 마지막에 붙은 [1]로 행동에 해당하는 인덱스를 구함\n",
+        "        action_max[non_final_mask] = self.policy_net(self.non_final_next_state).max(1)[1].detach()\n",
+        "\n",
+        "        # 다음 상태가 있는 것만을 걸러내고, size 32를 32*1로 변환\n",
+        "        action_max_non_final_next_state = action_max[non_final_mask].view(-1, 1)\n",
+        "        \n",
+        "        # 다음 상태가 있는 인덱스에 대해 행동 action_max의 Q값을 target Q-Network로 계산\n",
+        "        # policy net 에서 나타난 nextQmax 에 해당하는 action을 target net 으로 갖고와 따로 계산함.\n",
+        "        # detach() 메서드로 값을 꺼내옴\n",
+        "        # squeeze() 메서드로 size[minibatch*1]을 [minibatch]로 변환\n",
+        "        next_Q[non_final_mask] = self.target_net(self.non_final_next_state).gather(1, action_max_non_final_next_state).detach().squeeze()\n",
+        "\n",
+        "        # 3.4 정답신호로 사용할 Q(s_t, a_t)값을 Q러닝 식으로 계산한다\n",
+        "        expected_Q = self.eward_batch + GAMMA * next_Q\n",
+        "\n",
+        "        return expected_Q\n",
         "\n",
         "    def update_policynet(self):\n",
         "    # -----------------------------------------\n",
@@ -327,14 +347,21 @@
         "        self.optimizer.zero_grad()      # Initialize gradient(경사)\n",
         "        loss.backward()                 # Calculate backward(역전파 계산)\n",
         "        self.optimizer.step()           # perform single optimize step (가중치 수정)\n",
+        "    \n",
+        "    def update_targetnet(self):\n",
+        "    # -----------------------------------------\n",
+        "    #  Target net 을 Policy net 과 동기화(주기적)\n",
+        "    # -----------------------------------------\n",
+        "        self.target_net.load_state_dict(self.policy_net.state_dict())   # load_state_dict -> copies all state params & buffers from attribute\n",
+        "\n",
         "\n",
         "    def decide_action(self, state: torch.FloatTensor, episode: int) -> torch.LongTensor:\n",
         "        '''Decision of action with \\epsilon greedy'''\n",
         "        epsilon = 0.5 * (1 / (episode + 1))                         # epsilon decay\n",
         "        if epsilon <= np.random.uniform(0,1):                           # weighted action\n",
-        "            self.model.eval()                                           # change network mode to inference\n",
+        "            self.policy_net.eval()                                           # change network mode to inference\n",
         "            with torch.no_grad():\n",
-        "                action = self.model(state).max(1)[1].view(1,1)\n",
+        "                action = self.policy_net(state).max(1)[1].view(1,1)\n",
         "                # 신경망 출력의 최댓값에 대한 인덱스(action) = max(1)[1]\n",
         "                # .view(1,1)은 [torch.LongTensor of size 1] 을 size 1*1로 변환하는 역할을 한다\n",
         "\n",
@@ -417,6 +444,9 @@
         "\n",
         "                if done:\n",
         "                    print(f'{episode} Episode: Finished after {step + 1} steps：최근 10 에피소드의 평균 단계 수 = {episode_10_list.mean()}')\n",
+        "                \n",
+        "                    if (episode % 2 == 0):                                  # Every 2 episode, after done of step, update the target net to policy net\n",
+        "                        self.train.update_targetnet()\n",
         "                    break\n",
         "\n",
         "            if is_episode_final is True:\n",
